--- a/src/components/text/ExternalLink.astro
+++ b/src/components/text/ExternalLink.astro
@@ -1,18 +1,31 @@
 ---
-export interface Props {
-  children: string;
-  value: {
-    href: string;
-    blank?: boolean;
-  };
-}
+import { RiExternalLinkLine } from "@remixicon/react";
 
-const { children, value } = Astro.props;
-const { href, blank = true } = value;
+const { node } = Astro.props;
+const { markDef } = node;
+const { href, blank = true } = markDef;
 ---
+
+<!-- Style block is intentionally placed first to prevent an inline
+ space appearing after the link -->
+<style>
+  a {
+    display: inline;
+
+    svg {
+      display: inline-block;
+      vertical-align: baseline;
+      transform: translateY(0.1em);
+      margin-left: 0.15em;
+      width: 0.9em;
+      height: 0.9em;
+    }
+  }
+</style>
 
 <a
   href={href}
   target={blank ? "_blank" : undefined}
-  rel={blank ? "noopener noreferrer" : undefined}>{children}</a
+  rel={blank ? "noopener noreferrer" : undefined}
+  ><slot />{blank && <RiExternalLinkLine />}</a
 >
