--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -22,7 +22,7 @@ const { data: page } = await loadQuery<SanityDocument>({
         ...,
         _type == "internalLink" => {
           ...,
-          "reference": reference->{_type, "slug": slug.current, title}
+          "reference": @.reference->{_type, slug, title}
         }
       }
     },
