--- a/src/pages/guides/[slug].astro
+++ b/src/pages/guides/[slug].astro
@@ -25,7 +25,7 @@ const { data: guide } = await loadQuery<SanityDocument>({
         ...,
         _type == "internalLink" => {
           ...,
-          "reference": reference->{_type, "slug": slug.current, title}
+          "reference": @.reference->{_type, slug, title}
         }
       }
     }
