--- a/src/components/SanityImage.astro
+++ b/src/components/SanityImage.astro
@@ -1,6 +1,6 @@
 ---
 import type { SanityAssetDocument } from "@sanity/client";
-import type { ImageUrlBuilderOptionsWithAliases } from "@sanity/image-url/lib/types/types";
+import type { ImageUrlBuilderOptionsWithAliases } from "@sanity/image-url";
 import { urlForImage } from "@/sanity/lib/urlForImage";
 
 interface Props {
