Add breadcrumbs and filters

--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -3,6 +3,7 @@ import dayjs from "dayjs";
 import utc from "dayjs/plugin/utc";
 import type { RoughAnnotationType } from "rough-notation/lib/model";
 import { smartquotes } from "@/utils/smartquotes";
+import Breadcrumbs, { type BreadcrumbItem } from "./Breadcrumbs.astro";
 
 dayjs.extend(utc);
 
@@ -11,12 +12,20 @@ interface Props {
   date?: string;
   description?: string;
   annotation?: RoughAnnotationType;
+  breadcrumbs?: BreadcrumbItem[];
 }
 
-const { title, date, description, annotation = "circle" } = Astro.props;
+const {
+  title,
+  date,
+  description,
+  annotation = "circle",
+  breadcrumbs,
+} = Astro.props;
 ---
 
 <div class="page-head">
+  {breadcrumbs && <Breadcrumbs items={breadcrumbs} />}
   {
     date && (
       <time class="date" datetime={date}>
