--- a/src/components/react/forms/FormTitleStep/FormTitleStep.css
+++ b/src/components/react/forms/FormTitleStep/FormTitleStep.css
@@ -3,7 +3,23 @@
   align-items: flex-start;
   flex-direction: column;
   gap: var(--space-2xl);
-  padding-block: var(--space-2xl);
+  padding-block:  var(--space-xl) var(--space-2xl);
+}
+
+.form-title-step-back-link {
+  display: flex;
+  align-items: center;
+  gap: var(--space-2xs);
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: var(--step-0);
+  padding-block-end: var(--space-s);
+
+  @media (hover: hover) {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .form-title-step-header {
