--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,9 +20,10 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-end;
     gap: var(--space-m);
+    padding-block: var(--space-3xl);
   }
 
   img {
