Add filters and grouping for guides, add breadcrumb navigation (#297)

--- a/src/pages/forms/index.astro
+++ b/src/pages/forms/index.astro
@@ -1,6 +1,8 @@
 ---
 import { RiFileCheckLine, RiTimerLine } from "@remixicon/react";
 import type { SanityDocument } from "@sanity/client";
+import dayjs from "dayjs";
+import utc from "dayjs/plugin/utc";
 import PageHeader from "@/components/PageHeader.astro";
 import { type FormSlug, getFormConfig } from "@/constants/forms";
 import BaseLayout from "@/layouts/BaseLayout.astro";
@@ -14,6 +16,7 @@ const { data: forms } = await loadQuery<SanityDocument[]>({
   query: `*[_type == "form" && defined(slug)]{
     title,
     slug,
+    _updatedAt,
   } | order(publishDate desc)`,
   params,
 });
@@ -33,9 +36,12 @@ const formsWithPdfs = await Promise.all(
       pdfs,
       stepCount,
       timeEstimate,
+      updatedAt: form._updatedAt,
     };
   }),
 );
+
+dayjs.extend(utc);
 ---
 
 <BaseLayout
@@ -64,6 +70,7 @@ const formsWithPdfs = await Promise.all(
                 <RiTimerLine />
                 {form.timeEstimate}
               </li>
+              <li>Updated {dayjs.utc(form.updatedAt).format("MMM D, YYYY")}</li>
             </ul>
           </div>
         ))
