--- a/src/pages/guides/[slug].astro
+++ b/src/pages/guides/[slug].astro
@@ -3,6 +3,7 @@ import type { SanityDocument } from "@sanity/client";
 import dayjs from "dayjs";
 import localizedFormat from "dayjs/plugin/localizedFormat";
 import utc from "dayjs/plugin/utc";
+import type { BreadcrumbItem } from "@/components/Breadcrumbs.astro";
 import TableOfContents from "@/components/TableOfContents.astro";
 import PortableText from "@/components/text/PortableText.astro";
 import ProseLayout from "@/layouts/ProseLayout.astro";
@@ -38,9 +39,20 @@ const { data: guide } = await loadQuery<SanityDocument>({
 if (!guide) return Astro.redirect("/404");
 
 const headings = extractHeadings(guide.content);
+
+const breadcrumbs: BreadcrumbItem[] = [
+  { label: "Namesake", href: "/" },
+  { label: "Guides", href: "/guides" },
+];
 ---
 
-<ProseLayout title={guide.title} description={guide.description} color="white">
+<ProseLayout
+  title={guide.title}
+  description={guide.description}
+  annotation="box"
+  breadcrumbs={breadcrumbs}
+  color="white"
+>
   <TableOfContents headings={headings} slot="toc" />
   <PortableText value={guide.content} />
   <div class="date-updated">
