--- a/src/pages/forms/court-order-ma/index.astro
+++ b/src/pages/forms/court-order-ma/index.astro
@@ -6,7 +6,14 @@ import { getFormPdfMetadata } from "@/utils/getFormPdfMetadata";
 import { MaCourtOrderForm } from "./_Form";
 
 const { data: form } = await loadQuery<SanityDocument>({
-  query: `*[_type == "form" && slug.current == $slug][0]`,
+  query: `*[_type == "form" && slug.current == $slug][0]{
+    title,
+    description,
+    _updatedAt,
+    state,
+    category,
+    "costs": *[_type == "guide" && state._ref == ^.state._ref && category._ref == ^.category._ref][0].costs
+  }`,
   params: {
     slug: "court-order-ma",
   },
@@ -22,5 +29,6 @@ const pdfs = await getFormPdfMetadata("court-order-ma");
     description={form.description}
     updatedAt={form._updatedAt}
     pdfs={pdfs}
+    costs={form.costs}
   />
 </BaseLayout>
