Prose layout bottom padding

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -121,6 +121,7 @@ const headerDescription =
 
 <style lang="scss" is:global>
   .article-grid {
+    padding-block-end: var(--space-2xl);
     display: grid;
     grid-auto-rows: minmax(min-content, max-content);
     column-gap: var(--space-m);
