--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,8 +61,8 @@ if (!page) return Astro.redirect("/404");
     <section class="content">
       <PortableText value={page.content} />
       <div class="buttons">
-        <a href={siteInfo.urls.app} class="button primary"
-          >Get started <RiArrowRightLine className="icon" /></a
+        <a href={siteInfo.urls.guides} class="button primary"
+          >Browse guides <RiArrowRightLine className="icon" /></a
         >
         <a href={siteInfo.urls.chat}>Join us on Discord</a>
       </div>
