Add blog to siteInto, use siteInfo for header links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ const linkGroups: LinkGroup[] = [
   {
     title: "About",
     links: [
-      { href: "/blog", label: "Blog" },
+      { href: siteInfo.urls.blog, label: "Blog" },
       { href: "/press", label: "Press" },
       { href: "/brand-assets", label: "Brand" },
       { href: siteInfo.urls.donate, label: "Donate" },
